force-app/main/default/objects/Demand_Invoice__c/Demand_Invoice__c.object-meta.xml
<CustomObject>
    <label>Demand Invoice</label>
    <nameField>
        <displayFormat>D-{0000}</displayFormat>
        <label>Demand Invoice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Demand Invoices</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>