force-app/main/default/objects/Demand_Invoice__c/fields/Booking_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Booking_Owner_Email__c</fullName>
    <label>Booking Owner Email</label>
    <type>Email</type>
</CustomField>