force-app/main/default/objects/Demand_Invoice__c/fields/cc2_Email__c.field-meta.xml
<CustomField>
    <fullName>cc2_Email__c</fullName>
    <label>cc2 Email</label>
    <type>Email</type>
</CustomField>