force-app/main/default/objects/Demand_Invoice__c/fields/cc3_email__c.field-meta.xml
<CustomField>
    <fullName>cc3_email__c</fullName>
    <label>cc3 email</label>
    <type>Email</type>
</CustomField>