force-app/main/default/objects/Demand_Invoice__c/fields/Current_Demand_Installment__c.field-meta.xml
<CustomField>
    <fullName>Current_Demand_Installment__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Current Demand (Installment)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>