force-app/main/default/objects/Demand_Invoice__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Demand Invoices</relationshipLabel>
    <relationshipName>Demand_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>