force-app/main/default/objects/Demand_Invoice__c/fields/Day_0_demand_generation__c.field-meta.xml
<CustomField>
    <fullName>Day_0_demand_generation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Day 0 demand generation</label>
    <type>Checkbox</type>
</CustomField>