force-app/main/default/objects/Demand_Invoice__c/fields/Delivery_Return_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Return_Date__c</fullName>
    <label>Delivery/ Return Date</label>
    <type>Date</type>
</CustomField>