force-app/main/default/objects/Demand_Invoice__c/fields/Delivery_status__c.field-meta.xml
<CustomField>
    <fullName>Delivery_status__c</fullName>
    <label>Delivery status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>