force-app/main/default/objects/Demand_Invoice__c/fields/Demand_Generated__c.field-meta.xml
<CustomField>
    <fullName>Demand_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Demand Generated</label>
    <type>Checkbox</type>
</CustomField>