force-app/main/default/objects/Demand_Invoice__c/fields/Dispatch_date__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_date__c</fullName>
    <label>Dispatch date</label>
    <type>Date</type>
</CustomField>