force-app/main/default/objects/Demand_Invoice__c/fields/Future_Correspondence_Email__c.field-meta.xml
<CustomField>
    <fullName>Future_Correspondence_Email__c</fullName>
    <label>Future Correspondence Email</label>
    <type>Email</type>
</CustomField>