force-app/main/default/objects/Demand_Invoice__c/fields/Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date__c</fullName>
    <description>Date on which Demand was raised</description>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>