force-app/main/default/objects/Demand_Invoice__c/fields/Is_Advanced_Demand__c.field-meta.xml
<CustomField>
    <fullName>Is_Advanced_Demand__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Advanced Demand</label>
    <type>Checkbox</type>
</CustomField>