force-app/main/default/objects/Demand_Invoice__c/fields/is_delivered__c.field-meta.xml
<CustomField>
    <fullName>is_delivered__c</fullName>
    <formula>!(ISBLANK( Dispatch_date__c ))  &amp;&amp;  ISPICKVAL( Delivery_status__c , &quot;Delivered&quot;) &amp;&amp; 
!(ISBLANK(PO_no__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>is delivered</label>
    <type>Checkbox</type>
</CustomField>