force-app/main/default/objects/Demand_Invoice__c/fields/Is_Printed__c.field-meta.xml
<CustomField>
    <fullName>Is_Printed__c</fullName>
    <formula>!(ISBLANK(PO_no__c))  &amp;&amp;  !(ISBLANK(Dispatch_date__c))</formula>
    <label>Is Printed</label>
    <type>Checkbox</type>
</CustomField>