force-app/main/default/objects/Demand_Invoice__c/fields/Legal_Charges_Service_Tax_Basic__c.field-meta.xml
<CustomField>
    <fullName>Legal_Charges_Service_Tax_Basic__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Legal Charges Service Tax(Basic)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>