force-app/main/default/objects/Demand_Invoice__c/fields/MVAT_Amount__c.field-meta.xml
<CustomField>
    <fullName>MVAT_Amount__c</fullName>
    <label>MVAT Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>