force-app/main/default/objects/Demand_Invoice__c/fields/Outstanding_Service_Tax_Basic__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Service_Tax_Basic__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Outstanding Service Tax(Basic)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>