force-app/main/default/objects/Demand_Invoice__c/fields/PO_no__c.field-meta.xml
<CustomField>
    <fullName>PO_no__c</fullName>
    <label>PO no</label>
    <length>255</length>
    <type>Text</type>
</CustomField>