force-app/main/default/objects/Demand_Invoice__c/fields/Print_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Print_Invoice__c</fullName>
    <formula>HYPERLINK(&quot;/apex/DemandLetterTemplate?DemandInvId=&quot;+Id,&quot;Click Here&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Print Invoice</label>
    <type>Text</type>
</CustomField>