force-app/main/default/objects/Demand_Invoice__c/fields/Project_Construction_Stage__c.field-meta.xml
<CustomField>
    <fullName>Project_Construction_Stage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Construction Stages</label>
    <referenceTo>Project_Construction_Stages__c</referenceTo>
    <relationshipLabel>Demand Invoices</relationshipLabel>
    <relationshipName>Demand_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>