force-app/main/default/objects/Demand_Invoice__c/fields/Ready_Reckoner_Value__c.field-meta.xml
<CustomField>
    <fullName>Ready_Reckoner_Value__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Ready Reckoner Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>