force-app/main/default/objects/Demand_Invoice__c/fields/Reason_for_failure__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_failure__c</fullName>
    <label>Reason for failure</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Delivery_status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Wrong Address</fullName>
            </value>
            <value>
                <fullName>Person Unavailable</fullName>
            </value>
            <value>
                <fullName>Non-existing Address</fullName>
            </value>
            <value>
                <fullName>Not Accepted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>