force-app/main/default/objects/Demand_Invoice__c/fields/Registration_Demand_Generation__c.field-meta.xml
<CustomField>
    <fullName>Registration_Demand_Generation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Registration Demand Generation</label>
    <type>Checkbox</type>
</CustomField>