force-app/main/default/objects/Demand_Invoice__c/fields/Service_Tax_on_Interest__c.field-meta.xml
<CustomField>
    <fullName>Service_Tax_on_Interest__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Interest (ServiceTax)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>