force-app/main/default/objects/Demand_Invoice__c/fields/Service_Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>Service_Tax_Rate__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Service Tax Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>