force-app/main/default/objects/Demand_Invoice__c/fields/Stamp__c.field-meta.xml
<CustomField>
    <fullName>Stamp__c</fullName>
    <label>Stamp Duty Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>