force-app/main/default/objects/Demand_Invoice__c/fields/Standard_Customer_Pay_Plan_Detail__c.field-meta.xml
<CustomField>
    <fullName>Standard_Customer_Pay_Plan_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the payment mile stone record</description>
    <label>Standard Customer Pay Plan Detail</label>
    <referenceTo>Standard_Customer_Pay_Plan_Detail__c</referenceTo>
    <relationshipLabel>Demand Invoices</relationshipLabel>
    <relationshipName>Demand_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>