force-app/main/default/objects/Demand_Invoice__c/fields/TDS_Rate__c.field-meta.xml
<CustomField>
    <fullName>TDS_Rate__c</fullName>
    <defaultValue>0</defaultValue>
    <label>TDS Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>