force-app/main/default/objects/Demand_Invoice__c/fields/TDSAmount__c.field-meta.xml
<CustomField>
    <fullName>TDSAmount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>TDSAmount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>