force-app/main/default/objects/Demand_Invoice__c/fields/Total_Demanded_Service_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_Demanded_Service_Tax__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Demanded (Service Tax)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>