force-app/main/default/objects/Demand_Invoice__c/fields/Total_Payable_Installment__c.field-meta.xml
<CustomField>
    <fullName>Total_Payable_Installment__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Payable (Installment)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>