force-app/main/default/objects/Demand_Invoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Day_0_demand_generation__c</columns>
    <columns>NAME</columns>
    <columns>Due_Date__c</columns>
    <columns>Customer__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Total_Amount__c</columns>
    <columns>Project_Construction_Stage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>