force-app/main/default/objects/Demand_Invoice__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Current_Demand_Installment__c</columns>
    <columns>Current_Demand_Service_Tax__c</columns>
    <columns>Agreement_Value__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Outstanding_Service_Tax__c</columns>
    <columns>Service_Tax_Rate__c</columns>
    <columns>Invoice_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>